--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,15 @@
 plugins {
+    id "de.undercouch.download" version "5.3.0"
     id 'org.springframework.boot' version '2.5.6'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'war'
 }
+
+repositories {
+    mavenCentral()
+}
+
 
 group = 'com.newrelic.virtuoso'
 version = 'LATEST'
@@ -26,9 +32,14 @@ tasks.bootJar {
     archiveFileName.set("spring-boot-rest.jar")
 }
 
-
-repositories {
-    mavenCentral()
+task downloadNewrelic(type: Download) {
+    mkdir 'newrelic'
+    src 'https://download.newrelic.com/newrelic/java-agent/newrelic-agent/current/newrelic-java.zip'
+    dest file('newrelic')
+}
+task unzipNewrelic(type: Copy) {
+    from zipTree(file('newrelic/newrelic-java.zip'))
+    into rootDir
 }
 
 configurations {
